include/oneui/oneui_c_api.h

typedef struct OneUiWindow OneUiWindow;
typedef struct OneUiWidget OneUiWidget;
typedef void (*OneUiVoidCallback)(void* user_data);
typedef void (*OneUiDestroyCallback)(void* user_data);
/*
 * Cross-platform string ABI. The caller owns data and it is only read during
 * the function call. Invalid UTF-8 is converted to U+FFFD by OneUI.
 */
typedef struct OneUiUtf8String {
    const char* data;
    size_t length;
} OneUiUtf8String;
/* Additive ABI 25 interaction/text interfaces. All calls are UI-thread-only. */
typedef struct OneUiCommandRegistration OneUiCommandRegistration;
typedef int (*OneUiCommandEnabledCallback)(void* user_data);
typedef enum OneUiCommandResult {
    OneUiCommandNotFound = 0, OneUiCommandDisabled = 1,
    OneUiCommandExecuted = 2, OneUiCommandEnabled = 3
} OneUiCommandResult;
typedef struct OneUiKeyChordUtf8 {
    OneUiUtf8String key;
    unsigned int modifiers;
} OneUiKeyChordUtf8;
typedef struct OneUiTextOptionsUtf8 {
    unsigned int direction; /* 0 auto, 1 LTR, 2 RTL */
    unsigned int wrap;      /* 0 no wrap, 1 word wrap */
    OneUiUtf8String locale; /* empty selects und */
} OneUiTextOptionsUtf8;
typedef struct OneUiTextPositionUtf8 {
    size_t utf8_offset;
    unsigned int affinity; /* 0 upstream, 1 downstream */
} OneUiTextPositionUtf8;
/* Registration takes ownership of user_data on entry. destroy is called once,
 * including failure, or after unregister/owner destruction and any active callback.
 * A null shortcut means programmatic-only. Null enabled means always enabled.
 * Null return reports invalid/duplicate registration; no C++ exceptions escape. */
ONEUI_API OneUiCommandRegistration* oneui_widget_register_command_utf8(OneUiWidget* widget,
    OneUiUtf8String id, const OneUiKeyChordUtf8* shortcut, OneUiVoidCallback execute,
    OneUiCommandEnabledCallback enabled, void* user_data, OneUiDestroyCallback destroy);
ONEUI_API OneUiCommandRegistration* oneui_window_register_command_utf8(OneUiWindow* window,
    OneUiUtf8String id, const OneUiKeyChordUtf8* shortcut, OneUiVoidCallback execute,
    OneUiCommandEnabledCallback enabled, void* user_data, OneUiDestroyCallback destroy);
ONEUI_API void oneui_command_registration_destroy(OneUiCommandRegistration* registration);
/* Queries never execute the command. Enabled differs from Executed. */
ONEUI_API OneUiCommandResult oneui_widget_query_command_utf8(OneUiWidget* widget, OneUiUtf8String id);
ONEUI_API OneUiCommandResult oneui_widget_execute_command_utf8(OneUiWidget* widget, OneUiUtf8String id);
ONEUI_API OneUiCommandResult oneui_window_query_command_utf8(OneUiWindow* window, OneUiUtf8String id);
ONEUI_API OneUiCommandResult oneui_window_execute_command_utf8(OneUiWindow* window, OneUiUtf8String id);
/* Label/TextField/TextArea only; returns zero for invalid options or wrong type. */
ONEUI_API int oneui_widget_set_text_options_utf8(OneUiWidget* widget, const OneUiTextOptionsUtf8* options);
ONEUI_API int oneui_text_field_get_position_utf8(OneUiWidget* widget, OneUiTextPositionUtf8* position);
/* Rejects offsets inside UTF-8 sequences or graphemes; old index APIs keep their units. */
ONEUI_API int oneui_text_field_set_position_utf8(OneUiWidget* widget, OneUiTextPositionUtf8 position);